# multi-AI-Agent.

./: .env.example  .gitignore  README.md  docker-compose.infra.yml  pyproject.toml
app/: auth.py  cache.py  cleanup.py  config.py  data.py  db.py  external_data.py  llm.py  main.py  models.py  prompt_catalog.py  reporting.py  repository.py  services.py
app/templates/: base.html  batches.html  compare.html  costs.html  dashboard.html  evaluations.html  index.html  login.html  prompts.html  reviews.html  run_detail.html  runs.html
docs/: 多Agent工作-项目设计.md  第1步-MySQL与Redis升级.md  第3步-前端工作台升级.md  第4步-多页面与权限升级.md  第5步-数据库认证升级.md  第9步-成本看板批量实验与反馈闭环.md
docs/cleanup/: 2026-04-12-test-run-cleanup-report.json
docs/superpowers/plans/: 2026-04-12-runtime-memory-detail-ui.md  2026-04-17-issue-2-minimal-tool-calling.md
docs/superpowers/specs/: 2026-04-12-runtime-memory-detail-ui-design.md  2026-04-17-issue-2-minimal-tool-calling-design.md
scripts/: cleanup_test_pollution.py
tests/: test_workflows.py
