[project]
name = "flowpilot"
version = "0.1.0"
description = "Enterprise workflow automation MVP powered by multi-agent orchestration."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "langgraph>=0.6.7",
  "openai>=1.109.1",
  "python-multipart>=0.0.20",
  "pymysql>=1.1.1",
  "redis>=6.4.0",
  "sqlalchemy>=2.0.43",
  "uvicorn[standard]>=0.35.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
